--- a/init.p999.rc
+++ b/init.p999.rc
@@ -418,6 +418,11 @@ on boot
     setprop wifi.supplicant_scan_interval 20
     setprop wifi.interface wlan0
 
+## Daemon process to be run by init.
+##
+service ueventd /sbin/ueventd
+    critical
+
 ## Daemon processes to be run by init.
 ##
 service console /system/bin/sh
