--- a/init.p999.rc
+++ b/init.p999.rc
@@ -263,31 +263,26 @@ on boot
 # killed by the kernel.  These are used in ActivityManagerService.
     setprop ro.FOREGROUND_APP_ADJ 0
     setprop ro.VISIBLE_APP_ADJ 1
-    setprop ro.SECONDARY_SERVER_ADJ 2
-    setprop ro.BACKUP_APP_ADJ 2
-    setprop ro.HOME_APP_ADJ 4
-    setprop ro.HIDDEN_APP_MIN_ADJ 10
-    setprop ro.CONTENT_PROVIDER_ADJ 14
+    setprop ro.PERCEPTIBLE_APP_ADJ 2
+    setprop ro.HEAVY_WEIGHT_APP_ADJ 3
+    setprop ro.SECONDARY_SERVER_ADJ 4
+    setprop ro.BACKUP_APP_ADJ 5
+    setprop ro.HOME_APP_ADJ 6
+    setprop ro.HIDDEN_APP_MIN_ADJ 7
     setprop ro.EMPTY_APP_ADJ 15
 
 # Define the memory thresholds at which the above process classes will
 # be killed.  These numbers are in pages (4k).
-    #setprop ro.FOREGROUND_APP_MEM 1536
-    #setprop ro.VISIBLE_APP_MEM 2048
-    #setprop ro.SECONDARY_SERVER_MEM 4096
-    #setprop ro.BACKUP_APP_MEM 4096
-    #setprop ro.HOME_APP_MEM 4096
-    #setprop ro.HIDDEN_APP_MEM 5120
-    #setprop ro.CONTENT_PROVIDER_MEM 5632
-    #setprop ro.EMPTY_APP_MEM 6144
     setprop ro.FOREGROUND_APP_MEM 1536
     setprop ro.VISIBLE_APP_MEM 2048
-    setprop ro.SECONDARY_SERVER_MEM 3072
-    setprop ro.BACKUP_APP_MEM 3072
-    setprop ro.HOME_APP_MEM 3072
-    setprop ro.HIDDEN_APP_MEM 15360
-    setprop ro.CONTENT_PROVIDER_MEM 17920
-    setprop ro.EMPTY_APP_MEM 25600
+    setprop ro.PERCEPTIBLE_APP_MEM 4096
+    setprop ro.HEAVY_WEIGHT_APP_MEM 4096
+    setprop ro.SECONDARY_SERVER_MEM 5120
+    setprop ro.BACKUP_APP_MEM 5120
+    setprop ro.HOME_APP_MEM 5120
+    setprop ro.HIDDEN_APP_MEM 5632
+    setprop ro.EMPTY_APP_MEM 6144
+
 # Sensor AMI304
     # setprop ro.hardware AMIT
 # Sensor MPU3050
