--- a/init.p999.rc
+++ b/init.p999.rc
@@ -571,6 +571,10 @@ service dhcpcd_wlan0 /system/bin/dhcpcd -BKA wlan0  # LGE_AUTO_IP - enable IPv4L
     disabled
     oneshot
 
+service iprenew_wlan0 /system/bin/dhcpcd -n
+    disabled
+    oneshot
+
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
 
