p999: Enable new liblights
Change-Id: I050e6dd08e7883842f51aaeb2bbff3372a9f827d

--- a/init.p999.rc
+++ b/init.p999.rc
@@ -387,6 +387,11 @@ on boot
     chown system system /sys/devices/platform/star_aat2870.0/lsensor_onoff
     chown system system /sys/devices/platform/star_aat2870.0/alc
 
+# light controls
+    chown system system /sys/class/leds/buttonpanel/brightness
+    chown system system /sys/class/leds/buttonpanel/enable
+    chown system system /sys/class/leds/buttonpanel/blink
+
 # Define TCP buffer sizes for various networks
 #   ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax,
     setprop net.tcp.buffersize.default 4096,87380,196608,4096,16384,110208
