Better gps.conf settings for p999
Change-Id: If30f93ef725605d047b87af945783fc26e8e367b

--- a/gps.conf
+++ b/gps.conf
@@ -1,4 +1,73 @@
-NTP_SERVER=xtra1.gpsonextra.net
+NTP_SERVER=nist1.uccaribe.edu
+NTP_SERVER=nist1-la.WiTime.net
+NTP_SERVER=utcnist2.colorado.edu
+NTP_SERVER=timekeeper.isi.edu
+NTP_SERVER=clock.sjc.he.net
+NTP_SERVER=nist1.symmetricom.com
+NTP_SERVER=ntp-cup.external.hp.com
+NTP_SERVER=t2.timegps.net
+NTP_SERVER=clock.via.net
+NTP_SERVER=nist1.aol-ca.truetime.com
+NTP_SERVER=clock.isc.org
+NTP_SERVER=clepsydra.dec.com
+NTP_SERVER=t1.timegps.net
+NTP_SERVER=gps.layer42.net
+NTP_SERVER=time.no-such-agency.net
+NTP_SERVER=nist1-sj.WiTime.net
+NTP_SERVER=clock.fmt.he.net 
+NTP_SERVER=time-b.timefreq.bldrdoc.gov
+NTP_SERVER=time-a.timefreq.bldrdoc.gov  
+NTP_SERVER=time.nist.gov  
+NTP_SERVER=utcnist.colorado.edu 
+NTP_SERVER=time-c.timefreq.bldrdoc.gov   
+NTP_SERVER=rackety.udel.edu  
+NTP_SERVER=mizbeaver.udel.edu
+NTP_SERVER=ntp1.conectiv.com
+NTP_SERVER=ntp.myfloridacity.us
+NTP_SERVER=nist1.columbiacountyga.gov
+NTP_SERVER=ntp.your.org
+NTP_SERVER=bonehed.lcs.mit.edu
+NTP_SERVER=time.keneli.org
+NTP_SERVER=time-a.nist.gov
+NTP_SERVER=time-b.nist.gov
+NTP_SERVER=nist.expertsmi.com
+NTP_SERVER=nist.netservicesgroup.com
+NTP_SERVER=terrapin.csc.ncsu.edu
+NTP_SERVER=nist1-ny.WiTime.net
+NTP_SERVER=clock.nyc.he.net
+NTP_SERVER=clock.danplanet.com
+NTP_SERVER=wwv.tns.its.psu.edu
+NTP_SERVER=otc1.psu.edu
+NTP_SERVER=time.xmission.com    
+NTP_SERVER=nist1-dc.WiTime.net    
+NTP_SERVER=nist1.aol-va.truetime.com   
+NTP_SERVER=ntp.lucier.us    
+NTP_SERVER=time-nw.nist.gov    
+NTP_SERVER=ntp2.netwrx1.com  
+NTP_SERVER=ben.cs.wisc.edu 
+NTP_SERVER=ntp.uiuc.edu
+NTP_SERVER=nist1-ny.ustiming.org
+NTP_SERVER=nist1-nj.ustiming.org
+NTP_SERVER=nist1-pa.ustiming.org
+NTP_SERVER=ca.pool.ntp.org 
+NTP_SERVER=mx.pool.ntp.org 
+NTP_SERVER=gt.pool.ntp.org 
+NTP_SERVER=pa.pool.ntp.org 
+NTP_SERVER=bs.pool.ntp.org 
+NTP_SERVER=sv.pool.ntp.org 
+NTP_SERVER=0.us.pool.ntp.org
+NTP_SERVER=1.us.pool.ntp.org
+NTP_SERVER=2.us.pool.ntp.org
+NTP_SERVER=3.us.pool.ntp.org
+NTP_SERVER=0.north-america.pool.ntp.org
+NTP_SERVER=1.north-america.pool.ntp.org
+NTP_SERVER=2.north-america.pool.ntp.org
+NTP_SERVER=3.north-america.pool.ntp.org
+
+AGPS=/data/xtra.bin
+AGPS=http://xtra1.gpsonextra.net/xtra.bin
+XTRA_SERVER_1=/data/xtra.bin
+
 XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra.bin
 XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra.bin
 XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra.bin
@@ -8,11 +77,11 @@ XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra.bin
 DEBUG_LEVEL = 3
 
 # Intermediate position report, 1=enable, 0=disable
-INTERMEDIATE_POS=0
+INTERMEDIATE_POS=1
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-# ACCURACY_THRES=5000
+ACCURACY_THRES=5000
 
 ################################
 ##### AGPS server settings #####
@@ -20,7 +89,12 @@ INTERMEDIATE_POS=0
 
 # FOR SUPL SUPPORT, set the following
 SUPL_HOST=lbs.geo.t-mobile.com
+SUPL_HOST=supl.google.com
 SUPL_PORT=7275
+SUPL_SECURE_PORT=7275
+SUPL_NO_SECURE_PORT=3425
+SUPL_TLS_HOST=FQDN
+SUPL_TLS_CERT=/etc/SuplRootCert
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
@@ -32,3 +106,19 @@ SUPL_PORT=7275
 
 # Wiper (wifi positioning), 1=enable, 0=disable
 ENABLE_WIPER=1
+DEFAULT_AGPS_ENABLE=TRUE
+
+QOS_ACCURACY=50
+QOS_TIME_OUT_STANDALONE=60
+QOS_TIME_OUT_agps=89
+QosHorizontalThreshold=1000
+QosVerticalThreshold=500
+AssistMethodType=1
+AgpsUse=1
+AgpsMtConf=0
+AgpsMtResponseType=1
+AgpsServerType=1
+AgpsServerIp=3232235555
+CURRENT_CARRIER=common
+DEFAULT_USER_PLANE=TRUE
+REPORT_POSITION_USE_SUPL_REFLOC=1
