Add Compressed RAM Swap support for P999 from LG V21e drop
Change-Id: Id1d5767449357cd4703b3a76fe6b791078410f55

--- a/init.p999.rc
+++ b/init.p999.rc
@@ -624,6 +624,10 @@ service nvrm_daemon /system/bin/nvrm_daemon
     user root
     #onrestart restart servicemanager
 
+service swap_on_service /system/bin/sh /system/bin/swap_enable.sh
+	user root
+	oneshot
+
 on property:dev.bootcomplete=1
     start hdmid
 
