p999: Enable in-call audio tuning
Change-Id: I542e2a6654fd5680ee9ada044a603131627bd26e

--- a/init.p999.rc
+++ b/init.p999.rc
@@ -642,3 +642,13 @@ service secureclockd /system/bin/secureclockd
     oneshot
     user system
     group system
+
+service incall-audio /system/bin/incall-audio
+    disabled
+    oneshot
+
+on property:ril.call.status=1
+    start incall-audio
+
+on property:ril.call.status=0
+    stop incall-audio
