p999: Shut down rild ASAP when powering off
Prevent the normal radio power-off sequence, which will cause
power-up issues in the next boot

Change-Id: If6943c1c8f3a20bfc253e52e7372b91a8ea4e280

--- a/init.p999.rc
+++ b/init.p999.rc
@@ -652,3 +652,8 @@ on property:ril.call.status=1
 
 on property:ril.call.status=0
     stop incall-audio
+
+## Avoid receiving the power-off from the framework
+## to prevent radio init issues in the next boot
+on property:sys.shutdown.requested=1
+    stop ril-daemon
