p999: Shut down rild ASAP when rebooting into recovery
Companion change to If6943c1c8f3a20bfc253e52e7372b91a8ea4e280

Change-Id: I73328bf35e60be129a43b7bb269e7858fac71b1e

--- a/init.p999.rc
+++ b/init.p999.rc
@@ -657,3 +657,5 @@ on property:ril.call.status=0
 ## to prevent radio init issues in the next boot
 on property:sys.shutdown.requested=1
     stop ril-daemon
+on property:sys.shutdown.requested=1recovery
+    stop ril-daemon
