--- a/gps.conf
+++ b/gps.conf
@@ -1,4 +1,4 @@
-NTP_SERVER=xtra1.gpsonextra.net
+NTP_SERVER=north-america.pool.ntp.org
 XTRA_SERVER_1=http://xtra1.gpsonextra.net/xtra.bin
 XTRA_SERVER_2=http://xtra2.gpsonextra.net/xtra.bin
 XTRA_SERVER_3=http://xtra3.gpsonextra.net/xtra.bin
@@ -20,7 +20,10 @@ INTERMEDIATE_POS=0
 
 # FOR SUPL SUPPORT, set the following
 SUPL_HOST=lbs.geo.t-mobile.com
+SUPL_TLS_CERT=/etc/SuplRootCert
 SUPL_PORT=7275
+SUPL_HOST=10.176.29.225
+PHONE_TYPE=UMTS
 
 # FOR C2K PDE SUPPORT, set the following
 # C2K_HOST=c2k.pde.com or IP
