--- a/init.p999.rc
+++ b/init.p999.rc
@@ -196,6 +196,8 @@ service motion /system/bin/motion
 on property:dev.bootcomplete=1
     start hdmid
     start motion
+### KSM
+    write /sys/kernel/mm/ksm/run 1
 
 service rawip_vsnet1 /system/bin/init.vsnet 1
     class main
