p999: Restore the older radio libraries if necessary
Change-Id: I969c813b8353504fedff57e20d029dd220f626b2

--- a/init.p999.rc
+++ b/init.p999.rc
@@ -166,6 +166,11 @@ service motion /system/bin/motion
 on property:dev.bootcomplete=1
     start hdmid
     start motion
+    start bbtest
+
+service bbtest /system/bin/test-baseband
+    oneshot
+    disabled
 
 service rawip_vsnet1 /system/bin/init.vsnet 1
    user root
